--- a/PathogenBackup/PathogenBackup.vcxproj
+++ b/PathogenBackup/PathogenBackup.vcxproj
@@ -11,7 +11,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.c" />
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Makefile" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{5125394E-87A9-44EC-8B89-645A81787B45}</ProjectGuid>
